--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
   "module": "./dist/es6/src/",
   "jsnext:main": "./dist/esnext/src/",
   "types": "./dist/src/index.d.ts",
+  "repository": {
+    "url": "https://github.com/austinkelleher/mutton",
+    "type": "git"
+  },
   "author": "Austin Kelleher, a@alk.im",
   "license": "MIT",
   "publishConfig": {
